# aiousb-linux

./: .gitignore  ADC_SetCal.txt  CMakeLists.txt  DeviceIndexRecycling.md  Makefile  README.md
aiousb/: CMakeLists.txt  adc-threads.cpp  adc-threads.h  aiousb-private.h  aiousb.cpp  safe-queue.h  timespec-util.h
fw/: ACCESIO-PICO-DIO-16-RO-8.hex  ACCESIO-USB-AI16-16A.hex  ACCESIO-USB-AIO16-16A.hex  ACCESIO-USB-AO-ARB1.hex  ACCESIO-USB-AO16-16.hex  ACCESIO-USB-AO16-16A.hex  ACCESIO-USB-CTR-15.hex  ACCESIO-USB-DA12-8A.hex  ACCESIO-USB-DA12-8E.hex  ACCESIO-USB-DIO-16-RO-8.hex  ACCESIO-USB-DIO-16A.hex  ACCESIO-USB-DIO-24-CTR6.hex  ACCESIO-USB-DIO-32.hex  ACCESIO-USB-DIO-32I.hex  ACCESIO-USB-DIO-48.hex  ACCESIO-USB-DIO-96.hex  ACCESIO-USB-IDIO-16.hex  ACCESIO-USB-IIRO-16.hex  ACCESIO-USB-IIRO4-2SM.hex  ACCESIO-USB-IIRO4-COM.hex  ACCESIO-USBP-II8-IDO-4A.hex  CMakeLists.txt  USB_4003.hex  USB_8003.hex  USB_8006.hex  USB_8010.hex  USB_8020.hex  USB_8032.hex  USB_8033.hex  USB_8036.hex  USB_803C.hex  USB_8070.hex  USB_8080.hex  USB_815F.hex  USB_8180.hex
include/: CMakeLists.txt  accesio_usb_ids.h  accesio_usb_ioctl.h  aiousb.h  ids.h
module/: .gitignore  CMakeLists.txt  Makefile  accesio_usb.c  accesio_usb_ids.h  accesio_usb_ioctl.h  ids.h
python/: AIOUSB.py  monitor.py
samples/: AiousbAdcContinuousSample.cpp  AiousbAdcSample.cpp  AiousbDacSample.cpp  AiousbDioSample.cpp  AiousbIiroSample.cpp  AiousbSamples.inc  CMakeLists.txt  GenSampleHelpers.py
test/: AiousbSamples.inc  CMakeLists.txt  README.md  aiousb-adc-acquire-channel-test.cpp  aiousb-adc-getfastscanv-test.cpp  aiousb-adc-getscanv-test.cpp  aiousb-adc-single-channel-bulk.cpp  aiousb-adc-test.cpp  aiousb-aio16-16f-test.cpp  aiousb-ao16-16a-test.cpp  aiousb-c-linkage-test.c  aiousb-continuous-acquisition.cpp  aiousb-dio-test.cpp  aiousb-eeprom-test.cpp  aiousb-iiro-test.cpp  aiousb-test-getbyeeprom.cpp  aiousb-test.cpp  aiousb_poc.py  bulk-abort-test.c  bulk-test.c  hotplug-testing.cpp  offset-test.c  read-serial.c
