cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_STANDARD 11)
if (NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
project (AIOUSB)
add_compile_options(-Wall)
include(GNUInstallDirs)

set(AIOUSB_LIBS m pthread)
if (NOT NO_HOTPLUG)
  set(AIOUSB_LIBS ${AIOUSB_LIBS} "udev")
endif (NOT NO_HOTPLUG)


add_subdirectory(aiousb)
add_subdirectory(module)
add_subdirectory(test)
add_subdirectory(include)
add_subdirectory(fw)
add_subdirectory(samples)
